[package]
name = "nevy"
version = "0.4.0"
edition = "2024"
categories = ["network-programming", "game-development"]
description = "Game networking library for the Bevy game engine"
keywords = ["netcode", "networking", "bevy"]
license = "MIT OR Apache-2.0"
readme = "readme.md"
repository = "https://github.com/space-bandits/nevy"
documentation = "https://docs.rs/nevy"

[features]
default = ["quic", "messages"]
quic = ["nevy_transport/quic"]
messages = ["dep:nevy_messages"]

[dependencies]
nevy_transport = { path = "crates/nevy_transport", version = "0.4.0" }
nevy_messages = { path = "crates/nevy_messages", version = "0.4.0", optional = true }
bevy.workspace = true

[workspace]
resolver = "3"
members = ["crates/*", "examples/*"]

[workspace.dependencies]
bevy = { version = "0.18", default-features = false }
log = "0.4"
bytes = { version = "1.11" }
