[package]
name = "nevy"
version = "0.4.0"
edition = "2024"
categories = ["network-programming", "game-development"]
description = "Game networking library for the Bevy game engine"
keywords = ["netcode", "networking", "bevy"]
license = "MIT OR Apache-2.0"
readme = "readme.md"
repository = "https://github.com/space-bandits/nevy"
documentation = "https://docs.rs/nevy"

[features]
default = ["quic", "messages"]
quic = ["nevy_transport/quic"]
# Native WebTransport (desktop/server) - uses H3/QUIC
webtransport = ["nevy_transport/webtransport"]
# Browser WebTransport (WASM) - uses web_sys
webtransport-web = ["nevy_transport/webtransport-web"]
messages = ["dep:nevy_messages"]
sync = ["dep:nevy_sync"]

[dependencies]
nevy_transport = { path = "crates/nevy_transport", version = "0.4.0", default-features = false }
nevy_messages = { path = "crates/nevy_messages", version = "0.4.0", optional = true }
nevy_sync = { path = "crates/nevy_sync", version = "0.4.0", optional = true }
bevy.workspace = true

[workspace]
resolver = "3"
members = ["crates/*", "examples/*"]

[workspace.dependencies]
bevy = { version = "0.18", default-features = false }
bevy_derive = { version = "0.18" }
log = "0.4"
bytes = { version = "1.11" }
serde = { version = "1.0", features = ["derive"] }
smallvec = { version = "1.13", features = ["serde"] }
thiserror = "2.0"
