[package]
name = "webtransport-example"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = ["nevy/webtransport", "dep:rustls", "dep:rcgen", "dep:ring", "dep:quinn-proto", "dep:quinn-udp", "dep:time"]
web = ["nevy/webtransport-web", "dep:wasm-bindgen", "dep:web-sys", "dep:console_error_panic_hook"]

[dependencies]
nevy = { path = "../../", default-features = false }
base64 = "0.22"
bytes = "1.11"

# Native-only dependencies
rustls = { version = "0.23.5", default-features = false, features = ["std"], optional = true }
rcgen = { version = "0.13.1", optional = true }
ring = { version = "0.17", optional = true }
quinn-proto = { version = "0.11.3", features = ["rustls"], optional = true }
quinn-udp = { version = "0.5.14", optional = true }
time = { version = "0.3", optional = true }

# Native: full Bevy
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.18" }
bevy_ecs = { version = "0.18" }

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.18", default-features = false, features = ["default_app"] }
bevy_ecs = { version = "0.18" }
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console", "Window", "Document", "Element", "HtmlElement", "HtmlInputElement"] }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"] }

[[bin]]
name = "server"
required-features = ["native"]
